<resources>
    <string name="app_name">Awesome Ledger</string>
    <string name="action_settings">设置</string>
    <string name="add_item_title">新建</string>
    <string name="item_type_title">类型：</string>
    <string name="item_date_title">时间：</string>
    <string name="item_amount_title">金额：</string>
    <string name="item_kind_title">分类：</string>
    <string name="item_note_title">备注：</string>
    <string name="item_location_title">地点：</string>
    <string name="item_loaction_content">获取定位中…</string>
    <string name="menu_delete">删除此条</string>
    <string name="filter_vcode">"^[0-9]+(.[0-9]{2})?$"</string>
    <string name="outgoing">-</string>
    <string name="income">+</string>
</resources>
