<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.demo.awesomeledger.activity.AddItemActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="368dp"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/item_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Spinner
                    android:layout_height="wrap_content"
                    android:id="@+id/type"
                    android:layout_weight="1"
                    android:layout_width="120dp"/>

            <TextView
                    android:text="@string/item_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/dateView"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_dark"
                    android:paddingLeft="30dp"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="217dp"
                android:layout_height="match_parent" android:paddingLeft="30dp" android:paddingTop="10dp">
            <TextView
                    android:text="@string/item_kind_title"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:id="@+id/textView51"/>
            <Spinner
                    android:layout_height="wrap_content"
                    android:id="@+id/kind"
                    android:layout_weight="1"
                    android:layout_width="120dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="201dp"
                android:layout_height="match_parent" android:paddingLeft="30dp" android:paddingTop="10dp">
            <TextView
                    android:text="@string/item_amount_title"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:id="@+id/textView5"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText" android:layout_weight="1" android:layout_width="133dp"/>
        </LinearLayout>
        <TextView
                android:text="@string/item_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:paddingLeft="30dp"
                android:paddingTop="10dp"/>
        <MultiAutoCompleteTextView
                android:text="内容"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/multiAutoCompleteTextView"
                android:paddingLeft="30dp" android:paddingTop="10dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
